--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-    </application>
 
+        <activity
+            android:name=".presentation.view.form.FormActivity"
+            android:label="@string/new_card"
+            android:theme="@style/AppTheme.NoActionBar"/>
+    </application>
 </manifest>
