--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ kapt {
     generateStubs = true
 }
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile 'io.reactivex:rxjava:1.1.3'
@@ -60,8 +60,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.nhaarman:mockito-kotlin:0.7.0'
-    testCompile 'org.jetbrains.spek:spek:1.0.25'
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile 'org.assertj:assertj-core:3.6.1'
 }
 repositories {
     mavenCentral()
