--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ kapt {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile 'io.reactivex:rxjava:1.1.3'
@@ -64,7 +66,6 @@ dependencies {
 }
 repositories {
     mavenCentral()
-    maven {
-        url "http://repository.jetbrains.com/all"
-    }
+    maven { url "https://jitpack.io" }
+    maven { url "http://repository.jetbrains.com/all" }
 }
