--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ kapt {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.victor:lib:1.0.4'
     compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
