--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jdk:
   - oraclejdk8
 
 before_install:
+  - ./travis-ci/setup.sh
   - chmod +x gradlew
 
 android:
@@ -35,6 +36,7 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
+  - ./travis-ci/build.sh
   - ./gradlew checkstyle
   - ./gradlew test
   - ./gradlew build connectedCheck
