--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".presentation.view.main.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -41,6 +42,11 @@
         <activity
             android:name="com.cooltechworks.creditcarddesign.CardEditActivity"
             android:label="@string/new_card"
-            android:screenOrientation="portrait"/>
+            android:parentActivityName=".presentation.view.main.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.view.main.MainActivity"/>
+        </activity>
     </application>
 </manifest>
