--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,6 @@ env:
 jdk:
   - oraclejdk8
 
-before_install:
-  - ./travis-ci/setup.sh
-  - chmod +x gradlew
-
 android:
   components:
     - tools
@@ -25,6 +21,17 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
+
+before_install:
+  - cd $TRAVIS_BUILD_DIR/..
+  - wget https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip
+  - chmod a+x ndk.zip
+  - unzip ndk.zip > /dev/null
+  - rm ndk.zip
+  - export ANDROID_NDK_HOME=`pwd`/android-ndk-r12b
+  - export PATH=$PATH:$ANDROID_NDK_HOME
+  - echo $PATH
+  - chmod +x gradlew
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
