--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,6 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew checkstyle
-  - ./gradlew test
-  - ./gradlew build connectedCheck
+  - gradlew checkstyle
+  - gradlew test
+  - gradlew build connectedCheck
