--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
   - export ANDROID_NDK_HOME=`pwd`/android-ndk-r12b
   - export PATH=$PATH:$ANDROID_NDK_HOME
   - echo $PATH
+  - cd $TRAVIS_BUILD_DIR/
 
 android:
   components:
@@ -43,6 +44,6 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
-  - gradlew checkstyle
-  - gradlew test
-  - gradlew build connectedCheck
+  - ./gradlew checkstyle
+  - ./gradlew test
+  - ./gradlew build connectedCheck
