--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jdk:
   - oraclejdk8
 
 before_install:
-  - apt-get install cmake
+  - sudo apt-get install cmake
   - chmod +x gradlew
   - cd $TRAVIS_BUILD_DIR/..
   - wget https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip
