--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,5 +50,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.view.main.MainActivity"/>
         </activity>
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="74191977ac775d9e34de7cdabf2a5840cb9a3ab1"/>
     </application>
 </manifest>
