--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.mrebollob.m2p"
+        applicationId "com.mrebollob.balance"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -73,6 +74,9 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'org.jsoup:jsoup:1.10.1'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
+    }
 
     compile 'com.google.dagger:dagger:2.5'
     kapt 'com.google.dagger:dagger-compiler:2.5'
@@ -106,4 +110,5 @@ repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "http://repository.jetbrains.com/all" }
+    maven { url 'https://maven.fabric.io/public' }
 }
