--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,12 @@ buildscript {
     ext.kotlin_version = '1.0.6'
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
