--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,11 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.mrebollob.balance"
+        applicationId "com.mrebollob.restaurant"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode computeVersionCode()
-        versionName "0.6"
+        versionName "0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
