--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
     }
 }
@@ -37,7 +37,7 @@ def STRING = "String"
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.mrebollob.restaurant"
@@ -97,25 +97,27 @@ dexcount {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.victor:lib:1.0.4' // Loading view
-    compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
-    compile 'com.andrognito.pinlockview:pinlockview:1.0.1'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    // Loading view
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
+        transitive = true;
+    }
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+
+    compile 'com.victor:lib:1.0.4'
+    compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
+    compile 'com.andrognito.pinlockview:pinlockview:1.0.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'org.jsoup:jsoup:1.10.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
-        transitive = true;
-    }
 
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.google.dagger:dagger:2.5'
     kapt 'com.google.dagger:dagger-compiler:2.5'
     provided 'org.glassfish:javax.annotation:10.0-b28'
@@ -123,26 +125,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'com.nhaarman:mockito-kotlin:1.1.0'
     testCompile 'org.assertj:assertj-core:3.6.1'
-
-    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2', {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-    androidTestCompile 'com.github.fabioCollini:DaggerMock:0.6.2'
-    androidTestCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile 'com.android.support:support-annotations:25.1.1'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-    }
 }
 repositories {
     mavenCentral()
