--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,8 +104,9 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
         transitive = true;
     }
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.github.satyan:sugar:1.4'
 
     compile 'com.victor:lib:1.0.4'
     compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
