--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,10 @@ android {
 
     defaultConfig {
         applicationId "com.mrebollob.restaurant"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode computeVersionCode()
-        versionName "0.9"
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField STRING, "APP_URL", "\"https://play.google.com/apps/testing/com.mrebollob.restaurant\""
@@ -68,6 +68,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     sourceSets {
@@ -105,7 +114,10 @@ dependencies {
         transitive = true;
     }
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    kapt 'com.android.databinding:compiler:2.3.0'
     compile 'com.github.satyan:sugar:1.4'
 
     compile 'com.victor:lib:1.0.4'
