--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:allowBackup">
+
         <activity
             android:name=".presentation.view.splash.SplashScreenActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.CenterAnimation">
+            android:theme="@style/AppTheme.CenterAnimation"/>
+
+        <activity
+            android:name=".presentation.view.main.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -40,16 +47,24 @@
         </activity>
 
         <activity
-            android:name=".presentation.view.main.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
             android:name=".presentation.view.lock.LockActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar.Lock"/>
+            android:theme="@style/AppTheme.NoActionBar.Lock">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.view.main.MainActivity"/>
+        </activity>
+
+        <activity
+            android:name=".presentation.view.balance.BalanceActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".presentation.view.main.MainActivity"/>
+        </activity>
 
         <activity
             android:name=".presentation.view.form.FormActivity"
