--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,8 +118,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     kapt 'com.android.databinding:compiler:2.3.0'
-    compile 'com.github.satyan:sugar:1.4'
+    compile 'org.jetbrains.anko:anko-sqlite:0.9'
 
+    compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.victor:lib:1.0.4'
     compile 'com.github.cooltechworks:CreditCardView:v1.0.2'
     compile 'com.andrognito.pinlockview:pinlockview:1.0.1'
