--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
+apply plugin: 'realm-android'
 apply plugin: 'com.getkeepsafe.dexcount'
 
 apply from: 'config/gradle/jacoco.gradle'
@@ -58,7 +59,7 @@ android {
             buildConfigField STRING, "BUILD_TIME", "\"DEBUG\""
             debuggable true
             minifyEnabled false
-            testCoverageEnabled true
+            testCoverageEnabled false
         }
 
         release {
