--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@
 
 buildscript {
     ext.kotlin_version = '1.0.6'
+    ext.realmVersion = "3.0.0"
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
@@ -24,6 +25,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath "io.realm:realm-gradle-plugin:$realmVersion"
     }
 }
 
